--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "datatables.net-bs4": "^1.10.20",
+    "datatables.net-buttons-bs4": "^1.6.1",
+    "datatables.net-fixedcolumns-bs4": "^3.3.0",
+    "datatables.net-fixedheader-bs4": "^3.1.6",
+    "datatables.net-responsive-bs4": "^2.2.3",
+    "datatables.net-scroller-bs4": "^2.0.1",
+    "datatables.net-select-bs4": "^1.3.1",
     "pouchdb": "^7.2.1"
   }
 }
