--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "bootstrap": "^4.4.1",
     "datatables.net-bs4": "^1.10.20",
     "datatables.net-buttons-bs4": "^1.6.1",
@@ -8,6 +9,7 @@
     "datatables.net-responsive-bs4": "^2.2.3",
     "datatables.net-scroller-bs4": "^2.0.1",
     "datatables.net-select-bs4": "^1.3.1",
+    "moment": "^2.24.0",
     "pouchdb": "^7.2.1"
   }
 }
