--- a/.editorconfig
+++ b/.editorconfig
@@ -21,6 +21,9 @@ indent_size = 4
 indent_style = ignore
 insert_final_newline = ignore
 
+[**.css]
+insert_final_newline = false
+
 # Batch files use tabs for indentation
 [*.bat]
 indent_style = tab
